Revert "Drop Java 8 support completely"
This reverts commit ceb6b932da655276dfdd4e2ccfc02c3c67a34d5f.

Update the readme about remaining on Java 8